# stellaris-specific-save

./: .gitignore  Cargo.toml  README.md  example.env  prepare.ps1  prepare.sh  settings.json
.github/workflows/: rust.yml
src/: config.rs  functions.rs  lib.rs  main.rs
