[package]
name = "stellaris-specific-save"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
serde_json = "1.0.82"
directories = "4.0.1"

[dependencies.serde]
version = "1.0.140"
features=["derive"]
